--- a/CollectorQi/Views/ConferenciaFisicaConfirmarPage.xaml
+++ b/CollectorQi/Views/ConferenciaFisicaConfirmarPage.xaml
@@ -45,9 +45,12 @@
 
                     <Button x:Name="BtnSalvar"  FontSize="Small"   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="avancarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" TextColor="White" BorderRadius="16"
                     Clicked="OnClick_Salvar" Grid.Row="0" Text="Salvar" />
-                    
-                    <Button x:Name="BtnLimpar"   FontSize="Small"     VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png"    BackgroundColor="#ff9999" TextColor="White" BorderRadius="16"
-                    Clicked="OnClick_Limpar"   Grid.Row="1"   Text="Excluir" />
+
+                    <Button x:Name="BtnVoltar"  FontSize="Small"   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="voltarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" TextColor="White" BorderRadius="16"
+                    Clicked="OnClick_Voltar" Grid.Row="1" Text="Voltar" />
+
+                    <!--<Button x:Name="BtnLimpar"   FontSize="Small"     VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png"    BackgroundColor="#ff9999" TextColor="White" BorderRadius="16"
+                    Clicked="OnClick_Limpar"   Grid.Row="1"   Text="Excluir" />-->
 
                 </Grid>
             </Grid>
