--- a/CollectorQi/Views/ConferenciaFisicaReparosPage.xaml
+++ b/CollectorQi/Views/ConferenciaFisicaReparosPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" Title="" xmlns:converterPack="clr-namespace:Xamarin.Forms.ConvertersPack;assembly=Xamarin.Forms.ConvertersPack" x:Class="CollectorQi.Views.ConferenciaFisicaReparosPage" xmlns:local="clr-namespace:CollectorQi;assembly=CollectorQi">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" Title="" x:Class="CollectorQi.Views.ConferenciaFisicaReparosPage" xmlns:local="clr-namespace:CollectorQi;assembly=CollectorQi">
     <ContentPage.Content>
 
         <ScrollView Orientation="Vertical" VerticalOptions="Start">
@@ -54,9 +54,12 @@
 
                     <Button x:Name="BtnAvancar"  FontSize="Small"   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="avancarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" TextColor="White" BorderRadius="16"
                     Clicked="OnClick_Avancar" Grid.Row="0" Text="Proxima Conferência" />
-                    
-                    <Button x:Name="BtnLimpar"   FontSize="Small"     VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png"    BackgroundColor="#ff9999" TextColor="White" BorderRadius="16"
-                    Clicked="OnClick_Limpar"   Grid.Row="1"   Text="Excluir" />
+
+                    <Button x:Name="BtnVoltar"  FontSize="Small"   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="voltarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" TextColor="White" BorderRadius="16"
+                    Clicked="OnClick_Voltar" Grid.Row="1" Text="Voltar" />
+
+                    <!--<Button x:Name="BtnLimpar"   FontSize="Small"     VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png"    BackgroundColor="#ff9999" TextColor="White" BorderRadius="16"
+                    Clicked="OnClick_Limpar"   Grid.Row="1"   Text="Excluir" />-->
 
                 </Grid>
             </Grid>
