--- a/CollectorQi/Views/ConferenciaFisicaParametrosPage.xaml
+++ b/CollectorQi/Views/ConferenciaFisicaParametrosPage.xaml
@@ -27,15 +27,15 @@
                             <Grid>
                                 <Label x:Name="lblParametros" Text="Parametros" FontSize="Small" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Start" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" />
                                 <Grid>
-                                    <local:CustomEntryText x:Name="edtEstabelecimentoC" FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Estabelecimento..." Grid.Row="1"  Grid.Column="0" Grid.ColumnSpan="2" />
-                                    <local:CustomEntryText x:Name="edtDataEntradaC"     FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Data Entrada..."    Grid.Row="1"  Grid.Column="2" Grid.ColumnSpan="1" />
-                                    <local:CustomEntryText x:Name="edtUnidade"          FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Emitente..."        Grid.Row="2"  Grid.Column="0" Grid.ColumnSpan="3" />
-                                    <local:CustomEntryText x:Name="edtTipoConEst"       FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Descrição..."       Grid.Row="3"  Grid.Column="0" Grid.ColumnSpan="3" />
-                                    <local:CustomEntryText x:Name="edtNFRetC"           FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="NF Ret."            Grid.Row="4"  Grid.Column="0" Grid.ColumnSpan="1" />
-                                    <local:CustomEntryText x:Name="edtSerieC"           FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Serie"              Grid.Row="4"  Grid.Column="1" Grid.ColumnSpan="2"  />
-                                    <local:CustomEntryText x:Name="edtQtdItens"         FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="QtdItens"           Grid.Row="5"  Grid.Column="0"  />
-                                    <local:CustomEntryText x:Name="edtValorTotal"       FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="ValorTotal"         Grid.Row="5"  Grid.Column="1"  />
-                                    <local:CustomEntryText x:Name="edtQtdDiasXMl"       FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="QtdDiasXMl"         Grid.Row="5"  Grid.Column="2"  />
+                                    <local:CustomEntryText x:Name="txtEstabelecimento" FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Estabelecimento..." Grid.Row="1"  Grid.Column="0" Grid.ColumnSpan="2" />
+                                    <local:CustomEntryText x:Name="txtDataEntrada"     FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Data Entrada..."    Grid.Row="1"  Grid.Column="2" Grid.ColumnSpan="1" />
+                                    <local:CustomEntryText x:Name="txtCodEmitente"     FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Emitente..."        Grid.Row="2"  Grid.Column="0" Grid.ColumnSpan="3" />
+                                    <local:CustomEntryText x:Name="txtCodEmitenteDesc" FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Descrição..."       Grid.Row="3"  Grid.Column="0" Grid.ColumnSpan="3" />
+                                    <local:CustomEntryText x:Name="txtNFRet"           FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="NF Ret."            Grid.Row="4"  Grid.Column="0" Grid.ColumnSpan="1" />
+                                    <local:CustomEntryText x:Name="txtSerie"           FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Serie"              Grid.Row="4"  Grid.Column="1" Grid.ColumnSpan="2"  />
+                                    <local:CustomEntryText x:Name="txtQtdItens"        FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="QtdItens"           Grid.Row="5"  Grid.Column="0"  />
+                                    <local:CustomEntryText x:Name="txtValorTotal"      FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="ValorTotal"         Grid.Row="5"  Grid.Column="1"  />
+                                    <local:CustomEntryText x:Name="txtQtdDiasXMl"      FontSize="Micro" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="QtdDiasXMl"         Grid.Row="5"  Grid.Column="2"  />
                                 </Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
